weko-k8s-sample/k8s-weko-amd64/13-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: weko3
spec:
  clusterIP: None
  selector: { app: elasticsearch }
  ports:
  - { name: http, port: 9200, targetPort: 9200 }
  - { name: transport, port: 9300, targetPort: 9300 }
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: weko3
spec:
  serviceName: elasticsearch
  replicas: 2
  podManagementPolicy: Parallel
  selector:
    matchLabels: { app: elasticsearch }
  template:
    metadata:
      labels: { app: elasticsearch }
    spec:
      nodeSelector: { nodeType: DATA }
      securityContext:
        fsGroup: 1000
      containers:
      - name: elasticsearch
        image: weko-elasticsearch:6.8.23
        imagePullPolicy: Never
        ports:
        - { containerPort: 9200, name: http }
        - { containerPort: 9300, name: transport }
        resources:
          requests: { memory: "2560Mi", cpu: "500m" }
          limits:   { memory: "3Gi", cpu: "3" }
        readinessProbe:
          httpGet: { path: "/_cluster/health?local=true", port: 9200 }
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 30
        volumeMounts:
        - { name: data, mountPath: /usr/share/elasticsearch/data }
  volumeClaimTemplates:
  - metadata: { name: data }
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources: { requests: { storage: 60Gi } }
